style(chat): stops sidebar layout from shifting when animated

--- a/src/styles/views/messages.scss
+++ b/src/styles/views/messages.scss
@@ -806,7 +806,8 @@ $suggests-max-height: 200px;
     }
   }
 
-  &.open {
+  &.open,
+  .rt-list-item {
     width: 272px;
   }
 }
